force-app/main/default/objects/Option_Exclusion__c.object
<CustomObject>
    <fields>
        <fullName>Academic_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The academic program the option will be excluded for.</description>
        <label>Academic Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Academic Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Option Exclusions</relationshipLabel>
        <relationshipName>Option_Exclusions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>used for external id identification for deployments</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Option__c</fullName>
        <label>Option</label>
        <referenceTo>Enrollment_Component_Picklist_Option__c</referenceTo>
        <relationshipLabel>Option Exclusions</relationshipLabel>
        <relationshipName>Option_Exclusions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Option Exclusion</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OE-{0}</displayFormat>
        <label>Option Exclusion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Option Exclusions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>